6755917: Changes for openjdk6 build 12 6590549: Cygwin build of OpenJDK has problems and not very well documented 6635663: make/tools/AutoMulti/{AutoMulti,TestALFGenerator}.java still generate files with wrong legal notices 6681798: (build) CharsetEncoder.java fails to compile in openjdk6 on ubuntu 8.04 Summary: Final b12 state (as defined by the source bundle) Reviewed-by: darcy